--- a/data/popup-ai.in
+++ b/data/popup-ai.in
@@ -1,2 +1,9 @@
 #!/bin/sh
+# Force Wayland backend for layer-shell support
+export GDK_BACKEND=wayland
+
+# Preload gtk4-layer-shell to ensure it's loaded before libwayland
+# This is required for layer shell to work properly
+export LD_PRELOAD=/usr/lib64/libgtk4-layer-shell.so.0:${LD_PRELOAD}
+
 exec @PYTHON@ -m popup_ai.main "$@"
